--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,12 +2,20 @@ server:
   port: 9088
 
 spring:
-  application:
-    name: UCEP-SERVER
-  datasource:
-    url: jdbc:mysql://localhost:3306/ucep?allowPublicKeyRetrieval=true&useSSL=false
-    username: root
-    password: GigaTorb123
-  jpa:
-    hibernate:
-      ddl-auto: none
+  data:
+    mongodb:
+      authentication-database: admin
+      username: admin
+      password: Ped@l123
+      database: ucep
+      port: 27017
+      host: localhost
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+  servlet:
+    multipart:
+      max-file-size: 256MB
+      max-request-size: 256MB
+      enabled: true
+
