--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,10 @@ spring:
       max-file-size: 256MB
       max-request-size: 256MB
       enabled: true
-
+  rabbitmq:
+    addresses: localhost:5672
+  batch:
+    job:
+      enabled: false
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
