--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/roboto-serif": "^4.5.10",
@@ -16,6 +18,8 @@
     "@rjsf/utils": "^5.0.0-beta.12",
     "@rjsf/validator-ajv8": "^5.0.0-beta.12",
     "axios": "^1.1.3",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
