--- a/src/ucep-client/.eslintrc.json
+++ b/src/ucep-client/.eslintrc.json
@@ -21,9 +21,12 @@
   "plugins": [
     "react",
     "@typescript-eslint",
+    "simple-import-sort",
     "prettier"
   ],
   "rules": {
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
     "prettier/prettier": [
       "error"
     ]
