--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.0",
     "vite-plugin-eslint": "^1.8.1"
