--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -18,10 +18,13 @@
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2",
     "typescript": "^4.6.4",
     "vite": "^3.2.0",
     "vite-plugin-eslint": "^1.8.1"
