--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
+    "@fontsource/roboto-mono": "^4.5.8",
+    "@fontsource/roboto-serif": "^4.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
