--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -13,7 +13,8 @@
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/roboto-serif": "^4.5.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
