--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -12,6 +12,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/roboto-serif": "^4.5.10",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
