--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -12,6 +12,9 @@
     "@fontsource/roboto": "^4.5.8",
     "@fontsource/roboto-mono": "^4.5.8",
     "@fontsource/roboto-serif": "^4.5.10",
+    "@rjsf/core": "^5.0.0-beta.12",
+    "@rjsf/utils": "^5.0.0-beta.12",
+    "@rjsf/validator-ajv8": "^5.0.0-beta.12",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
