--- a/src/ucep-client/.eslintrc.json
+++ b/src/ucep-client/.eslintrc.json
@@ -22,9 +22,14 @@
     "react",
     "@typescript-eslint",
     "simple-import-sort",
+    "unused-imports",
     "prettier"
   ],
   "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "unused-imports/no-unused-imports": "error",
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
     "prettier/prettier": [
