--- a/src/ucep-client/package.json
+++ b/src/ucep-client/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2",
     "typescript": "^4.6.4",
